<?xml version="1.0" encoding="utf-8"?><!--/*** Copyright (C) 2012 Flairwork Technologies Sdn Bhd (http://www.flairwork.com)*/--><greendroid.widget.ActionBarHost	xmlns:android="http://schemas.android.com/apk/res/android"	android:id="@id/gd_action_bar_host"	android:layout_width="fill_parent"	android:layout_height="fill_parent"	android:orientation="vertical">	<greendroid.widget.ActionBar		android:id="@id/gd_action_bar"		android:layout_height="@dimen/gd_action_bar_height"		android:layout_width="fill_parent"		android:background="?attr/gdActionBarBackground" />	<FrameLayout		android:id="@id/gd_action_bar_content_view"		android:layout_height="0dp"		android:layout_width="fill_parent"		android:layout_weight="1"		android:background="#ffffff">		<LinearLayout		android:layout_width="fill_parent"		android:layout_height="fill_parent"		android:orientation="vertical"		android:background="#ffffff"		android:layout_margin="5dp"		android:padding="5dp">		<ImageView			android:layout_width="fill_parent"			android:layout_height="wrap_content"			android:scaleType="centerInside"			android:src="@drawable/logo" />		<TextView			android:layout_width="fill_parent"			android:layout_height="wrap_content"			android:layout_marginTop="5dp"			android:textColor="@android:color/black"			android:text="@string/about_content" />				<TextView			android:layout_width="fill_parent"			android:layout_height="wrap_content"			android:layout_marginTop="5dp"			android:textColor="@android:color/black"			android:text="@string/about_quran_title" />				<TextView			android:layout_width="fill_parent"			android:layout_height="wrap_content"			android:layout_marginTop="5dp"			android:textColor="@android:color/black"			android:text="@string/about_quran_content" />				<TextView			android:layout_width="fill_parent"			android:layout_height="wrap_content"			android:layout_marginTop="5dp"			android:textColor="@android:color/black"			android:text="@string/about_index_title" />				<TextView			android:layout_width="fill_parent"			android:layout_height="wrap_content"			android:layout_marginTop="5dp"			android:textColor="@android:color/black"			android:text="@string/about_index_content" />				<TextView			android:layout_width="fill_parent"			android:layout_height="wrap_content"			android:layout_marginTop="5dp"			android:textColor="@android:color/black"			android:text="@string/about_topic_title" />				<TextView			android:layout_width="fill_parent"			android:layout_height="wrap_content"			android:layout_marginTop="5dp"			android:textColor="@android:color/black"			android:text="@string/about_topic_content" />				<TextView			android:layout_width="fill_parent"			android:layout_height="wrap_content"			android:layout_marginTop="5dp"			android:textColor="@android:color/black"			android:text="@string/more_info_on_quran360" />				<TextView			android:layout_width="fill_parent"			android:layout_height="wrap_content"			android:layout_marginTop="5dp"			android:textColor="@android:color/black"			android:text="@string/app_url" />				<TextView			android:layout_width="fill_parent"			android:layout_height="wrap_content"			android:layout_marginTop="5dp"			android:textColor="@android:color/black"			android:text="@string/app_mailto" />			</LinearLayout>	</FrameLayout></greendroid.widget.ActionBarHost>